tests/diagnostics/expressions/literals/unterminated_string/expect.txt
# exit: 1
input/main.coppice:2:10: error: unterminated string literal
      x := "abc
           ^
